kubernetes/producto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-producto-app
  namespace: ms-producto-namespace
  labels:
    app: ms-producto-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-producto-app
  template:
    metadata:
      labels:
        app: ms-producto-app
    spec:
      containers:
        - name: ms-producto-app
          image: raulkkonen/ms-producto-mongo:v1
          ports:
            - containerPort: 8282
