kubernetes/mongo-svc-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-mongodb-service
  namespace: ms-producto-namespace
spec:
  selector:
    app: ms-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None  # Hace que MongoDB tenga una IP estática y que los pods puedan comunicarse entre ellos fácilmente
